--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
     <div class="content">
         <div class="left-side">
-            <div class="pictures"></div>
+            <div class="pictures"><img src="profile.jpg" alt=""></div>
             <div class="profile-card">
                 <div class="profile-name">KRSBX</div>
-                <div class="profile-name">Game Developers</div>
+                <div class="desc">Game Developers</div>
             </div>
         </div>
     </div>
