--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <div class="desc">Game Developers</div>
             </div>
         </div>
+        <div class="right side">
+            <div class="circulum-vitae">
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
