--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topBar">
         <span><a href="#">Home</a></span>
-        <span><a href="Profiles/index.html">Profiles</a></span>
+        <span><a href="Profiles/Profiles.html">Profiles</a></span>
         <span><a href="https://krsbx.itch.io">Games</a></span>
     </div>
     <div class="content">
