Rearrange file locations

--- a/Profiles.html
+++ b/Profiles.html
@@ -6,13 +6,13 @@
     <title>Profiles</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="Profiles.css">
+    <link rel="stylesheet" href="Styles/Profiles.css">
 </head>
 <body>
     <div class="profile-card">
         <div class="card-header">
             <div class="pictures">
-                <img src="../profile.jpg" alt="">
+                <img src="Images/profile.jpg" alt="">
             </div>
             <div class="profile-name">KRSBX</div>
             <div class="desc">Game Developers</div>
