--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>KRSBX</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
     <div class="topBar">
@@ -16,7 +16,7 @@
     </div>
     <div class="content">
         <div class="left-side">
-            <div class="pictures"><img src="profile.jpg" alt=""></div>
+            <div class="pictures"><img src="Images/profile.jpg" alt=""></div>
             <div class="profile-card">
                 <div class="profile-name">KRSBX</div>
                 <div class="desc">Game Developers</div>
