--- a/index.html
+++ b/index.html
@@ -9,24 +9,38 @@
     <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
-    <div class="topBar">
-        <span><a href="#">Home</a></span>
-        <span><a href="Profiles/Profiles.html">Profiles</a></span>
-        <span><a href="https://krsbx.itch.io">Games</a></span>
-    </div>
-    <div class="content">
-        <div class="left-side">
-            <div class="pictures"><img src="Images/profile.jpg" alt=""></div>
-            <div class="profile-card">
-                <div class="profile-name">KRSBX</div>
-                <div class="desc">Game Developers</div>
+    <nav class="navbar">
+        <div class="inner-width">
+            <div class="logo">
+                <a href="/"><img src="Images/profile.jpg"></a>
+            </div>
+            <button class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="navbar-menu">
+                <a href="#">Home</a></span>
+                <a href="Profiles.html">Profiles</a>
+                <a href="https://krsbx.itch.io">Games</a>
             </div>
         </div>
-        <div class="right side">
-            <div class="circulum-vitae">
-                
+    </nav>
+
+    <section id="Home">
+        <div class="inner-width">
+            <div class="content">
+                <h1>Hi! I'm </h1>
+                <div class="social-media">
+                    <a href="http://github.com/krsbx" class="fab fa-github"></a>
+                    <a href="http://twitter.com/krsbx" class="fab fa-twitter"></a>
+                    <a href="http://instagram.com/krs.bx" class="fab fa-instagram"></a>
+                </div>    
+                <div class="circulum-vitae">
+                    <a href="cv.html">My CV</a>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
