--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="inner-width">
             <div class="logo">
-                <a href="/"><img src="Images/profile.jpg"></a>
+                <a href="/"><img src="Images/profile.jpg" width="50px" height="50px" alt=""></a>
             </div>
             <button class="menu-btn">
                 <span></span>
