--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>KRSBX</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <link rel="stylesheet" href="Styles/Font.css"/>
 </head>
 <body>
     <nav class="navbar">
         <div class="inner-width">
             <div class="logo">
-                <a href="/"><img src="Images/profile.jpg" width="50px" height="50px" alt=""></a>
+                <span>
+                    <a href="/">K</a>
+                </span>
             </div>
             <button class="menu-btn">
                 <span></span>
