Fix Porfiles page
Add navbar to profiles page

--- a/Profiles.html
+++ b/Profiles.html
@@ -5,26 +5,50 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Profiles</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <link rel="stylesheet" href="Styles/Profiles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <link rel="stylesheet" href="Styles/Font.css"/>
 </head>
 <body>
-    <div class="profile-card">
-        <div class="card-header">
-            <div class="pictures">
-                <img src="Images/profile.jpg" alt="">
+    <nav class="navbar">
+        <div class="inner-width">
+            <div class="logo">
+                <span>
+                    <a href="/">K</a>
+                </span>
             </div>
-            <div class="profile-name">KRSBX</div>
-            <div class="desc">Game Developers</div>
-        </div>
-        <div class="card-footer">
-            <div class="contact-me">Contact Me</div>
-            <div class="social-media">
-                <a href="http://github.com/krsbx" class="fab fa-github"></a>
-                <a href="http://twitter.com/krsbx" class="fab fa-twitter"></a>
-                <a href="http://instagram.com/krs.bx" class="fab fa-instagram"></a>
+            <button class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="navbar-menu">
+                <a href="index.html">Home</a></span>
+                <a href="Profiles.html">Profiles</a>
+                <a href="https://krsbx.itch.io">Games</a>
             </div>
         </div>
-    </div>
+    </nav>
+    <section id="Home">
+        <div class="inner-width">
+            <div class="profile-card">
+                <div class="card-header">
+                    <div class="pictures">
+                        <img src="Images/profile.jpg" alt="">
+                    </div>
+                    <div class="profile-name">KRSBX</div>
+                    <div class="desc">Game Developers</div>
+                </div>
+                <div class="card-footer">
+                    <div class="contact-me">Contact Me</div>
+                    <div class="social-media">
+                        <a href="http://github.com/krsbx" class="fab fa-github"></a>
+                        <a href="http://twitter.com/krsbx" class="fab fa-twitter"></a>
+                        <a href="http://instagram.com/krs.bx" class="fab fa-instagram"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
