Add CV Page and Fix few lines
Fix typos in index.css and index.html
Remove unnecessary line in *.html
Add Navigation Bar for CV
Add Card Header for CV

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span></span>
             </button>
             <div class="navbar-menu">
-                <a href="#">Home</a></span>
+                <a href="#">Home</a>
                 <a href="Profiles.html">Profiles</a>
                 <a href="https://krsbx.itch.io">Games</a>
             </div>
@@ -39,8 +39,8 @@
                     <a href="http://twitter.com/krsbx" class="fab fa-twitter"></a>
                     <a href="http://instagram.com/krs.bx" class="fab fa-instagram"></a>
                 </div>    
-                <div class="circulum-vitae">
-                    <a href="cv.html">My CV</a>
+                <div class="curriculum-vitae">
+                    <a href="CV.html">My CV</a>
                 </div>
             </div>
         </div>
