--- a/CV.html
+++ b/CV.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Profiles</title>
+    <title>Curriculum Vitae</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="Styles/Profiles.css">
+    <link rel="stylesheet" href="Styles/CV.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <link rel="stylesheet" href="Styles/Font.css"/>
 </head>
@@ -29,24 +29,16 @@
             </div>
         </div>
     </nav>
-    
-    <section id="Profiles">
+
+    <section id="CV">
         <div class="inner-width">
             <div class="profile-card">
-                <div class="card-header">
-                    <div class="pictures">
-                        <img src="Images/profile.jpg" alt="">
-                    </div>
-                    <div class="profile-name">KRSBX</div>
-                    <div class="desc">Game Developers</div>
+                <div class="pictures">
+                    <img src="Images/profile.jpg" alt="">
                 </div>
-                <div class="card-footer">
-                    <div class="contact-me">Contact Me</div>
-                    <div class="social-media">
-                        <a href="http://github.com/krsbx" class="fab fa-github"></a>
-                        <a href="http://twitter.com/krsbx" class="fab fa-twitter"></a>
-                        <a href="http://instagram.com/krs.bx" class="fab fa-instagram"></a>
-                    </div>
+                <div class="profile-text">
+                    <div class="profile-name">KRSBX</div>
+                    <div class="profile-desc">Game Developers</div>
                 </div>
             </div>
         </div>
