--- a/Profiles.html
+++ b/Profiles.html
@@ -5,9 +5,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Profiles</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="Styles/Font.css"/>
+    <link rel="stylesheet" href="Styles/Navbar.css">
     <link rel="stylesheet" href="Styles/Profiles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="Styles/Font.css"/>
 </head>
 <body>
     <nav class="navbar">
