--- a/Profiles.html
+++ b/Profiles.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="Styles/Navbar.css">
     <link rel="stylesheet" href="Styles/Profiles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script src="Script/Navbar.js"></script>
 </head>
 <body>
     <nav class="navbar">
