--- a/CV.html
+++ b/CV.html
@@ -35,13 +35,38 @@
 
     <section id="CV">
         <div class="inner-width">
-            <div class="profile-card">
-                <div class="pictures">
-                    <img src="Images/profile.jpg" alt="">
+            <div class="content">
+                <div class="profile-card">
+                    <div class="pictures">
+                        <img src="Images/profile.jpg" alt="">
+                    </div>
+                    <div class="profile-text">
+                        <div class="profile-name">KRSBX</div>
+                        <div class="profile-desc">Game Developers</div>
+                    </div>
                 </div>
-                <div class="profile-text">
-                    <div class="profile-name">KRSBX</div>
-                    <div class="profile-desc">Game Developers</div>
+                <div class="side-by-side">
+                    <div class="skill-sections">
+                        <div class="sec-title">Skills</div>
+                        <div class="skills">Unity <span>65%</span></div>
+                        <div class="skills">C# <span>55%</span></div>
+                        <div class="skills">UI/UX <span>68%</span></div>
+                        <div class="skills">Python3 <span>20%</span></div>
+                        <div class="skills">C++ <span>45%</span></div>
+                    </div>
+                    <div class="game-dev-exp">
+                        <div class="experiences">
+                            <div class="year">
+                                <div class="dots"></div>
+                                <div class="year-num">2019</div>
+                            </div>
+                            <div class="project">
+                                <div class="company">KRSBX</div>
+                                <div class="project-name">Developer Simulator</div>
+                                <div class="positions">Game Developer</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
