--- a/CV.html
+++ b/CV.html
@@ -35,7 +35,7 @@
 
     <section id="CV">
         <div class="inner-width">
-            <div class="content">
+            <div>
                 <div class="profile-card">
                     <div class="pictures">
                         <img src="Images/profile.jpg" alt="">
@@ -47,12 +47,21 @@
                 </div>
                 <div class="side-by-side">
                     <div class="skill-sections">
-                        <div class="sec-title">Skills</div>
-                        <div class="skills">Unity <span>65%</span></div>
-                        <div class="skills">C# <span>55%</span></div>
-                        <div class="skills">UI/UX <span>68%</span></div>
-                        <div class="skills">Python3 <span>20%</span></div>
-                        <div class="skills">C++ <span>45%</span></div>
+                        <div class="skill-header">Skills</div>
+                        <div>
+                            <div class="skills">Unity</div>
+                            <div class="skills">C#</div>
+                            <div class="skills">UI/UX</div>
+                            <div class="skills">Python3</div>
+                            <div class="skills">C++</div>
+                        </div>
+                        <div>
+                            <div class="skill-percent">65%</div>
+                            <div class="skill-percent">55%</div>
+                            <div class="skill-percent">68%</div>
+                            <div class="skill-percent">20%</div>
+                            <div class="skill-percent">45%</div>
+                        </div>
                     </div>
                     <div class="game-dev-exp">
                         <div class="experiences">
@@ -60,10 +69,10 @@
                                 <div class="dots"></div>
                                 <div class="year-num">2019</div>
                             </div>
-                            <div class="project">
-                                <div class="company">KRSBX</div>
+                            <div>
+                                <div class="project-company">KRSBX</div>
                                 <div class="project-name">Developer Simulator</div>
-                                <div class="positions">Game Developer</div>
+                                <div class="project-positions">Game Developer</div>
                             </div>
                         </div>
                     </div>
