--- a/index.html
+++ b/index.html
@@ -58,27 +58,51 @@ Fusce convallis lacus nisi. Phasellus sit amet ultricies elit. Sed eu metus port
 Sed dignissim tempus ligula et pellentesque. Phasellus id hendrerit ante. Nam non varius est, ut ornare neque. Aenean sit amet blandit ligula, vitae finibus ex. Maecenas tempor interdum magna, at molestie tortor feugiat rutrum. Donec posuere urna non urna luctus, id accumsan enim sagittis. Suspendisse potenti. Maecenas felis ante, consectetur ac metus a, laoreet tristique elit.
     </section>
     <script type="text/javascript">
+        var typedText = document.getElementById("typedText");
         var text = ["Hi! I'm KRSBX ", "I'm a Developer "];
-        var i = 0, j = 0;
+
+        var charIndex = 0, textIndex = 0;
+
+        const textDelay = 150, eraseDelay = 100, newDelay = 1000;
+
+        //Typing Effect
         function typing(){
-            if(i < text.length){
-                if(j < text[i].length){
-                    document.getElementById("typedText").innerHTML += text[i][j];
-                    j++;
-                    setTimeout(typing, 150);
-                }else{
-                    document.getElementById("typedText").innerHTML = "";
-                    j = 0;
-                    i++;
-                    typing();
-                }
+            if(charIndex < text[textIndex].length){
+                //Add each char inside the text into typedText one by one
+                typedText.innerHTML += text[textIndex].charAt(charIndex);
+                charIndex++;
+                //Delay for the next input
+                setTimeout(typing, textDelay);
             }else{
-                i = 0;
-                typing();
+                setTimeout(erase, newDelay);
             }
         }
 
-        typing();
+        //Erasing Effect
+        function erase(){
+            if(charIndex > 0){
+                //Pop each char inside typedText by removing the latest char
+                typedText.innerHTML = text[textIndex].substr(0, charIndex-1);
+                charIndex--;
+                //Delay for the next step
+                setTimeout(erase, eraseDelay);
+            }else{
+                textIndex++;
+
+                //Check whether all the text already showned or not
+                if(textIndex >= text.length)
+                    textIndex = 0;
+                //Delay for the next input
+                setTimeout(typing, textDelay);
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", function(){
+            //Check whether the page already loaded or not
+            // if so, call typing function
+            if(typedText)
+                setTimeout(typing, newDelay);
+        });
     </script>
 </body>
 </html>
