Adding CV Data in CV.html

--- a/CV.html
+++ b/CV.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Styles/Font.css"/>
     <link rel="stylesheet" href="Styles/Navbar.css">
     <link rel="stylesheet" href="Styles/CV.css">
+    <link rel="stylesheet" href="Styles/CV/nextCV.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="Script/Navbar.js"></script>
@@ -65,15 +66,130 @@
                     </div>
                     <div class="game-dev-exp">
                         <div class="experiences">
-                            <div class="year">
+                            <div class="project-year">
                                 <div class="dots"></div>
-                                <div class="year-num">2019</div>
+                                <div class="years">2019</div>
                             </div>
                             <div>
                                 <div class="project-company">KRSBX</div>
                                 <div class="project-name">Developer Simulator</div>
                                 <div class="project-positions">Game Developer</div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="nextCV">
+        <div class="inner-width">
+            <div id="project-periode">
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2018</div>
+                        </div>
+                        <div>
+                            <div class="project-company">Aristotell</div>
+                            <div class="project-name">Aristotell</div>
+                            <div class="project-positions">Lead Programmer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="project-periode">
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">Aristotell</div>
+                            <div class="project-name">Aristotell Archi</div>
+                            <div class="project-positions">System Programmer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">4DevAlter</div>
+                            <div class="project-name">Run For Your Life</div>
+                            <div class="project-positions">Lead Programmer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">4DevAlter</div>
+                            <div class="project-name">Tower Board</div>
+                            <div class="project-positions">Lead Programmer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">Aristotell</div>
+                            <div class="project-name"><a href="https://play.google.com/store/apps/details?id=com.Aristotell.AristotellBooks">Aristotell Books</a></div>
+                            <div class="project-positions">Lead Programmer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">KRSBX</div>
+                            <div class="project-name"><a href="https://krsbx.itch.io/developer-simulator">Developer Simulator</a></div>
+                            <div class="project-positions">Game Developer</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2019</div>
+                        </div>
+                        <div>
+                            <div class="project-company">4DevAlter</div>
+                            <div class="project-name">Planet Raids</div>
+                            <div class="project-positions">Lead Programmer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="project-periode">
+                <div class="dev-exp">
+                    <div class="experiences">
+                        <div class="project-year">
+                            <div class="dots"></div>
+                            <div class="years">2020</div>
+                        </div>
+                        <div>
+                            <div class="project-company">Aristotell</div>
+                            <div class="project-name">Book Platforms</div>
+                            <div class="project-positions">Lead Programmer</div>
                         </div>
                     </div>
                 </div>
