--- a/CV.html
+++ b/CV.html
@@ -33,38 +33,127 @@
             </div>
         </div>
     </nav>
-
-    <section id="CV">
-        <div class="inner-width">
-            <div>
-                <div class="profile-card">
-                    <div class="pictures">
-                        <img src="Images/profile.jpg" alt="">
+    
+    <section id="Page">
+        <section id="CV">
+            <div class="inner-width">
+                <div>
+                    <div class="profile-card">
+                        <div class="pictures">
+                            <img src="Images/profile.jpg" alt="">
+                        </div>
+                        <div class="profile-text">
+                            <div class="profile-name">KRSBX</div>
+                            <div class="profile-desc">Game Developers</div>
+                        </div>
                     </div>
-                    <div class="profile-text">
-                        <div class="profile-name">KRSBX</div>
-                        <div class="profile-desc">Game Developers</div>
+                    <div class="side-by-side">
+                        <div class="skill-sections">
+                            <div class="skill-header">Skills</div>
+                            <div>
+                                <div class="skills">Unity</div>
+                                <div class="skills">C#</div>
+                                <div class="skills">UI/UX</div>
+                                <div class="skills">Python3</div>
+                                <div class="skills">C++</div>
+                            </div>
+                            <div>
+                                <div class="skill-percent">65%</div>
+                                <div class="skill-percent">55%</div>
+                                <div class="skill-percent">68%</div>
+                                <div class="skill-percent">20%</div>
+                                <div class="skill-percent">45%</div>
+                            </div>
+                        </div>
+                        <div class="game-dev-exp">
+                            <div class="experiences">
+                                <div class="project-year">
+                                    <div class="dots"></div>
+                                    <div class="years">2019</div>
+                                </div>
+                                <div>
+                                    <div class="project-company">KRSBX</div>
+                                    <div class="project-name">Developer Simulator</div>
+                                    <div class="project-positions">Game Developer</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="side-by-side">
-                    <div class="skill-sections">
-                        <div class="skill-header">Skills</div>
-                        <div>
-                            <div class="skills">Unity</div>
-                            <div class="skills">C#</div>
-                            <div class="skills">UI/UX</div>
-                            <div class="skills">Python3</div>
-                            <div class="skills">C++</div>
-                        </div>
-                        <div>
-                            <div class="skill-percent">65%</div>
-                            <div class="skill-percent">55%</div>
-                            <div class="skill-percent">68%</div>
-                            <div class="skill-percent">20%</div>
-                            <div class="skill-percent">45%</div>
+            </div>
+        </section>
+    
+        <section id="nextCV">
+            <div class="inner-width">
+                <div id="project-periode">
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2018</div>
+                            </div>
+                            <div>
+                                <div class="project-company">Aristotell</div>
+                                <div class="project-name">Aristotell</div>
+                                <div class="project-positions">Lead Programmer</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="game-dev-exp">
+                </div>
+                <div id="project-periode">
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2019</div>
+                            </div>
+                            <div>
+                                <div class="project-company">Aristotell</div>
+                                <div class="project-name">Aristotell Archi</div>
+                                <div class="project-positions">System Programmer</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2019</div>
+                            </div>
+                            <div>
+                                <div class="project-company">4DevAlter</div>
+                                <div class="project-name">Run For Your Life</div>
+                                <div class="project-positions">Lead Programmer</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2019</div>
+                            </div>
+                            <div>
+                                <div class="project-company">4DevAlter</div>
+                                <div class="project-name">Tower Board</div>
+                                <div class="project-positions">Lead Programmer</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2019</div>
+                            </div>
+                            <div>
+                                <div class="project-company">Aristotell</div>
+                                <div class="project-name"><a href="https://play.google.com/store/apps/details?id=com.Aristotell.AristotellBooks">Aristotell Books</a></div>
+                                <div class="project-positions">Lead Programmer</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-exp">
                         <div class="experiences">
                             <div class="project-year">
                                 <div class="dots"></div>
@@ -72,129 +161,42 @@
                             </div>
                             <div>
                                 <div class="project-company">KRSBX</div>
-                                <div class="project-name">Developer Simulator</div>
+                                <div class="project-name"><a href="https://krsbx.itch.io/developer-simulator">Developer Simulator</a></div>
                                 <div class="project-positions">Game Developer</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2019</div>
+                            </div>
+                            <div>
+                                <div class="project-company">4DevAlter</div>
+                                <div class="project-name">Planet Raids</div>
+                                <div class="project-positions">Lead Programmer</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="project-periode">
+                    <div class="dev-exp">
+                        <div class="experiences">
+                            <div class="project-year">
+                                <div class="dots"></div>
+                                <div class="years">2020</div>
+                            </div>
+                            <div>
+                                <div class="project-company">Aristotell</div>
+                                <div class="project-name">Book Platforms</div>
+                                <div class="project-positions">Lead Programmer</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <section id="nextCV">
-        <div class="inner-width">
-            <div id="project-periode">
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2018</div>
-                        </div>
-                        <div>
-                            <div class="project-company">Aristotell</div>
-                            <div class="project-name">Aristotell</div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="project-periode">
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">Aristotell</div>
-                            <div class="project-name">Aristotell Archi</div>
-                            <div class="project-positions">System Programmer</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">4DevAlter</div>
-                            <div class="project-name">Run For Your Life</div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">4DevAlter</div>
-                            <div class="project-name">Tower Board</div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">Aristotell</div>
-                            <div class="project-name"><a href="https://play.google.com/store/apps/details?id=com.Aristotell.AristotellBooks">Aristotell Books</a></div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">KRSBX</div>
-                            <div class="project-name"><a href="https://krsbx.itch.io/developer-simulator">Developer Simulator</a></div>
-                            <div class="project-positions">Game Developer</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2019</div>
-                        </div>
-                        <div>
-                            <div class="project-company">4DevAlter</div>
-                            <div class="project-name">Planet Raids</div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="project-periode">
-                <div class="dev-exp">
-                    <div class="experiences">
-                        <div class="project-year">
-                            <div class="dots"></div>
-                            <div class="years">2020</div>
-                        </div>
-                        <div>
-                            <div class="project-company">Aristotell</div>
-                            <div class="project-name">Book Platforms</div>
-                            <div class="project-positions">Lead Programmer</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </section>
     </section>
 </body>
 </html>
